# run_little_donkey

./: .gitignore  ClaudeCode配置实战：从机制层面弥补模型差距.md  FastGPT-架构深度分析.md  PROJECT_OPTIMIZATION.md  RAGFlow-架构深度分析.md  README.md  csdn_article_AgenticEngineering编程范式大变天.md  csdn_article_CSDN热门文章分类分析.md  csdn_article_Ollama本地部署指南.md  csdn_article_程序员生存图鉴.md  index.html  从图灵测试到意识检测：AI真的有意识吗.md
.openclaw/: DEVELOPMENT.md  MEMORY.md
ai-video-narrator/: .env.example  .gitignore  README.md
comment-insight/: .gitignore  DEVELOPMENT.md  OPTIMIZATION.md  PRD.md  QUICKSTART.md
content/: .cheat-state.json  STATUS.md  WORKFLOW.md  candidates.md  rubric_notes.md  script_patterns.md
csdn-articles/: DOC_CI_CD流水线搭建.md  DOC_Docker_Kubernetes实战.md  DOC_Serverless实践.md  DOC_微服务架构设计.md
docs/: 01-职业方向全景地图.md  02-求职准备与简历.md  03-面试技巧与常见问题.md  04-Claude-Code高级用法与人性化协作.md  AI模型选购指南-2026免费与性价比篇.md  GPT-5完全指南-2026最新解析.md
docs/AI编程实战/ai-code-reviewer/: .env.example  README.md  pyproject.toml  requirements.txt
docs/AI编程实战/ai-code-reviewer/ai_code_reviewer/: __init__.py  __main__.py  cli.py  config.py  diff_parser.py  llm_client.py  models.py  report.py  reviewer.py
docs/AI编程实战/ai-code-reviewer/ai_code_reviewer/analyzers/: __init__.py  logic.py  performance.py  security.py  style.py
docs/AI编程实战/ai-code-reviewer/examples/: pre-commit-hook.sh  sample_review.py
docs/AI编程实战/ai-code-reviewer/tests/: test_diff_parser.py  test_models.py
province-conquest/: DESIGN.md  HEROES.md  HISTORIAN-SCRIPT.md  OPTIMIZATION.md  PK-RULES.md  VIDEO-PRODUCTION.md  index.html
scripts/: git-sync.sh
(+287 files in other folders)
